cli/tests/test/unhandled_rejection.out
Check [WILDCARD]/test/unhandled_rejection.ts
error: Uncaught (in promise) Error: rejection
  reject(new Error("rejection"));
         ^
    at [WILDCARD]/test/unhandled_rejection.ts:2:10
    at new Promise (<anonymous>)
    at [WILDCARD]/test/unhandled_rejection.ts:1:1
