cli/tests/test/unhandled_rejection.ts
new Promise((resolve, reject) => {
  reject(new Error("rejection"));
});
